--- a/les02.html
+++ b/les02.html
@@ -83,10 +83,10 @@ function MM_swapImage() { //v3.0
           <td><a href="les02-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image22','','images/images/ab2-4.png',1)"><img src="images/images/w2-4.png" width="340" height="30" id="Image22" /></a></td>
         </tr>
         <tr>
-          <td><a href="les02-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab2-5.png',1)"><img src="images/images/w2-3.png" width="340" height="30" id="Image21" /></a></td>
+          <td><a href="les02-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab2-5.png',1)"><img src="images/images/a2-5.png" width="340" height="30" id="Image24" /></a></td>
         </tr>
         <tr>
-          <td><a href="les02-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab2-6.png',1)"><img src="images/images/w2-4.png" width="340" height="30" id="Image22" /></a></td>
+          <td><a href="les02-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab2-6.png',1)"><img src="images/images/a2-6.png" width="340" height="30" id="Image25" /></a></td>
         </tr>
         <tr>
           <td><a href="https://forms.gle/kXaixsyQSgKsKrc76" target="_blank" onmouseover="MM_swapImage('Image23','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image23" /></a></td>
