--- a/les05-1.html
+++ b/les05-1.html
@@ -58,25 +58,25 @@ function MM_swapImage() { //v3.0
 <table width="1028" border="0" align="center" cellpadding="1" cellspacing="1">
   <tr>
     <td width="340" height="50"><img src="images/images/d.png" width="340" height="50" /></td>
-    <td width="668" height="500" rowspan="14" valign="top"><img src="images/images/t5-1.png" width="680" height="1500" /></td>
+    <td width="668" height="500" rowspan="14" valign="top"><img src="images/images/t5-1.png" width="680" height="960" /></td>
   </tr>
   <tr>
     <td width="340" height="30"><a href="intro.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/images/ab.png',1)"><img src="images/images/a.png" width="340" height="30" id="Image6" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="30" id="Image7" /></a></td>
+    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="60" id="Image7" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="30" id="Image8" /></a></td>
+    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="60" id="Image8" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="30" id="Image9" /></a></td>
+    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="60" id="Image9" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="30" id="Image10" /></a></td>
+    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="60" id="Image10" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="30" id="Image11" /></a>
+    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="60" id="Image11" /></a>
       <table width="340" border="0" cellspacing="1" cellpadding="1">
         <tr>
           <td><a href="les05-1.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image19','','images/images/ab5-1.png',1)"><img src="images/images/w5-1.png" width="340" height="30" id="Image19" /></a></td>
@@ -91,7 +91,7 @@ function MM_swapImage() { //v3.0
           <td><a href="les05-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image22','','images/images/ab5-4.png',1)"><img src="images/images/w5-4.png" width="340" height="30" id="Image22" /></a></td>
         </tr>
         <tr>
-          <td><a href="https://forms.gle/bPR3Gs5hi9bMaaUY8" target="_blank" onmouseover="MM_swapImage('Image24','','images/images/ab1-7.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a1-7.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="https://forms.gle/hKeV45UUWp6pxKnH9" target="_blank" onmouseover="MM_swapImage('Image24','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image24" /></a></td>
         </tr>
     </table></td>
   </tr>
@@ -107,11 +107,7 @@ function MM_swapImage() { //v3.0
   <tr>
     <td width="340" height="60"><a href="les09.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image15','','images/images/ab9.png',1)"><img src="images/images/a9.png" width="340" height="60" id="Image15" /></a></td>
   </tr>
-    <tr>
-    <td width="340" height="60"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzCEYEyvkPCmMw-aRKbU5lFwlQocfASFpld6L8zMVfLYGvkQ/viewform" target="_blank" onmouseover="MM_swapImage('Image16','','images/images/ab10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image16" /></a></td>
-  </tr>
-    
-    <tr>
+        <tr>
     <td width="340" height="110">&nbsp;</td>
   </tr>
 </table>
