--- a/les07-3.html
+++ b/les07-3.html
@@ -58,31 +58,31 @@ function MM_swapImage() { //v3.0
 <table width="1028" border="0" align="center" cellpadding="1" cellspacing="1">
   <tr>
     <td width="340" height="50"><img src="images/images/d.png" width="340" height="50" /></td>
-    <td width="668" height="500" rowspan="14" valign="top"><img src="images/images/t7-3.png" width="680" height="2300" /></td>
+    <td width="668" height="760" rowspan="14" valign="top"><img src="images/images/t7-3.png" width="680" height="760" /></td>
   </tr>
   <tr>
     <td width="340" height="30"><a href="intro.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/images/ab.png',1)"><img src="images/images/a.png" width="340" height="30" id="Image6" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="30" id="Image7" /></a></td>
+    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="60" id="Image7" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="30" id="Image8" /></a></td>
+    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="60" id="Image8" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="30" id="Image9" /></a></td>
+    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="60" id="Image9" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="30" id="Image10" /></a></td>
+    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="60" id="Image10" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="30" id="Image11" /></a></td>
+    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="60" id="Image11" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="30" id="Image12" /></a></td>
+    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="60" id="Image12" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les07.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image13','','images/images/ab7.png',1)"><img src="images/images/a7.png" width="340" height="30" id="Image13" /></a>
+    <td width="340" height="30"><a href="les07.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image13','','images/images/ab7.png',1)"><img src="images/images/a7.png" width="340" height="60" id="Image13" /></a>
       <table width="340" border="0" cellspacing="1" cellpadding="1">
         <tr>
           <td><a href="les07-1.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image19','','images/images/ab7-1.png',1)"><img src="images/images/a7-1.png" width="340" height="30" id="Image19" /></a></td>
@@ -91,25 +91,25 @@ function MM_swapImage() { //v3.0
           <td><a href="les07-2.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image20','','images/images/ab7-2.png',1)"><img src="images/images/a7-2.png" width="340" height="30" id="Image20" /></a></td>
         </tr>
         <tr>
-          <td><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image32','','images/images/ab7-3.png',1)"><img src="images/images/a7-3-1.png" width="340" height="30" id="Image32" /></a></td>
+          <td><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image32','','images/images/ab7-3.png',1)"><img src="images/images/a7-3.png" width="340" height="30" id="Image32" /></a></td>
         </tr>
         <tr>
-          <td><a href="les07-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-4.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="les07-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-4.png',1)"><img src="images/images/a7-4.png" width="340" height="30" id="Image24" /></a></td>
         </tr>
         <tr>
-          <td><a href="les07-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-5.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="les07-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab7-5.png',1)"><img src="images/images/a7-5.png" width="340" height="30" id="Image25" /></a></td>
         </tr>
         <tr>
-          <td><a href="les07-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-6.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="les07-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image26','','images/images/ab7-6.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image26" /></a></td>
         </tr>
         <tr>
-          <td><a href="les07-7.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-7.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="les07-7.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image27','','images/images/ab7-7.png',1)"><img src="images/images/a7-7.png" width="340" height="30" id="Image27" /></a></td>
         </tr>
         <tr>
-          <td><a href="les07-8.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab7-8.png',1)"><img src="images/images/a7-6.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="les07-8.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image28','','images/images/ab7-8.png',1)"><img src="images/images/a7-8.png" width="340" height="30" id="Image28" /></a></td>
         </tr>
         <tr>
-          <td><a href="https://forms.gle/PfifKsrAxkSiX5bN8" target="_blank" onmouseover="MM_swapImage('Image31','','images/images/ab1-7.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a1-7.png" width="340" height="30" id="Image31" /></a></td>
+          <td><a href="https://forms.gle/PfifKsrAxkSiX5bN8" target="_blank" onmouseover="MM_swapImage('Image31','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image31" /></a></td>
         </tr>
     </table></td>
   </tr>
@@ -118,9 +118,6 @@ function MM_swapImage() { //v3.0
   </tr>
   <tr>
     <td width="340" height="60"><a href="les09.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image15','','images/images/ab9.png',1)"><img src="images/images/a9.png" width="340" height="60" id="Image15" /></a></td>
-  </tr>
-    <tr>
-    <td width="340" height="60"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzCEYEyvkPCmMw-aRKbU5lFwlQocfASFpld6L8zMVfLYGvkQ/viewform" target="_blank" onmouseover="MM_swapImage('Image16','','images/images/ab10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image16" /></a></td>
   </tr>
     
     <tr>
