--- a/les08-1.html
+++ b/les08-1.html
@@ -64,31 +64,31 @@ function MM_swapImage() { //v3.0
     <td width="340" height="30"><a href="intro.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/images/ab.png',1)"><img src="images/images/a.png" width="340" height="30" id="Image6" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="30" id="Image7" /></a></td>
+    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="60" id="Image7" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="30" id="Image8" /></a></td>
+    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="60" id="Image8" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="30" id="Image9" /></a></td>
+    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="60" id="Image9" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="30" id="Image10" /></a></td>
+    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="60" id="Image10" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="30" id="Image11" /></a></td>
+    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="60" id="Image11" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="30" id="Image12" /></a></td>
+    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="60" id="Image12" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les07.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image13','','images/images/ab7.png',1)"><img src="images/images/a7.png" width="340" height="30" id="Image13" /></a></td>
+    <td width="340" height="30"><a href="les07.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image13','','images/images/ab7.png',1)"><img src="images/images/a7.png" width="340" height="60" id="Image13" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les08.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image14','','images/images/ab8.png',1)"><img src="images/images/a8.png" width="340" height="30" id="Image14" /></a>
+    <td width="340" height="30"><a href="les08.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image14','','images/images/ab8.png',1)"><img src="images/images/a8.png" width="340" height="60" id="Image14" /></a>
       <table width="340" border="0" cellspacing="1" cellpadding="1">
         <tr>
-          <td><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab8-1-1.png',1)"><img src="images/images/a8-1-1.png" width="340" height="30" id="Image24" /></a></td>
+          <td><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab8-1.png',1)"><img src="images/images/a8-1.png" width="340" height="30" id="Image24" /></a></td>
         </tr>
         <tr>
           <td><a href="les08-2.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image20','','images/images/ab8-2.png',1)"><img src="images/images/a8-2.png" width="340" height="30" id="Image20" /></a></td>
@@ -100,16 +100,16 @@ function MM_swapImage() { //v3.0
           <td><a href="les08-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image22','','images/images/ab8-4.png',1)"><img src="images/images/a8-4.png" width="340" height="30" id="Image22" /></a></td>
         </tr>
         <tr>
-          <td><a href="les08-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image20','','images/images/ab8-2.png',1)"><img src="images/images/a8-2.png" width="340" height="30" id="Image20" /></a></td>
+          <td><a href="les08-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image23','','images/images/ab8-5.png',1)"><img src="images/images/a8-5.png" width="340" height="30" id="Image23" /></a></td>
         </tr>
         <tr>
-          <td><a href="les08-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image21','','images/images/ab8-3.png',1)"><img src="images/images/a8-3.png" width="340" height="30" id="Image21" /></a></td>
+          <td><a href="les08-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab8-6.png',1)"><img src="images/images/a8-6.png" width="340" height="30" id="Image25" /></a></td>
         </tr>
         <tr>
-          <td><a href="les08-7.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image22','','images/images/ab8-4.png',1)"><img src="images/images/a8-4.png" width="340" height="30" id="Image22" /></a></td>
+          <td><a href="les08-7.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image26','','images/images/ab8-7.png',1)"><img src="images/images/a8-7.png" width="340" height="30" id="Image26" /></a></td>
         </tr>
         <tr>
-          <td><a href="https://forms.gle/Pdwav3C3eHDmVB7M9" target="_blank" onmouseover="MM_swapImage('Image23','','images/images/ab1-7.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a1-7.png" width="340" height="30" id="Image23" /></a></td>
+          <td><a href="https://forms.gle/JmKoDyZbzHFZs3EU8" target="_blank" onmouseover="MM_swapImage('Image27','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image27" /></a></td>
         </tr>
     </table></td>
   </tr>
