--- a/les01.html
+++ b/les01.html
@@ -89,13 +89,13 @@ function MM_swapImage() { //v3.0
           <td><a href="les01-7.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab1-7.png',1)"><img src="images/images/a1-7.png" width="340" height="30" id="Image25" /></a></td>
         </tr>  
         <tr>
-          <td><a href="les01-8.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image26','','images/images/ab1-8.png',1)"><img src="images/images/a1-8.png" width="340" height="30" id="Image26" /></a></td>
+          <td><a href="les01-8.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image26','','images/images/ab1-8.png',1)"><img src="images/images/a1-8.png" width="340" height="40" id="Image26" /></a></td>
         </tr>  
         <tr>
           <td><a href="les01-9.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image27','','images/images/ab1-9.png',1)"><img src="images/images/a1-9.png" width="340" height="30" id="Image27" /></a></td>
         </tr>     
         <tr>
-          <td><a href="https://forms.gle/KJVNfywFRa4Cyt5P6" target="_blank" onmouseover="MM_swapImage('Image28','','images/images/ab10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image25" /></a></td>
+          <td><a href="https://forms.gle/KJVNfywFRa4Cyt5P6" target="_blank" onmouseover="MM_swapImage('Image28','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image25" /></a></td>
         </tr>
     </table></td>
   </tr>
