--- a/les02-3.html
+++ b/les02-3.html
@@ -65,10 +65,10 @@ function MM_swapImage() { //v3.0
     <td width="340" height="30"><a href="intro.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/images/ab.png',1)"><img src="images/images/a.png" width="340" height="30" id="Image6" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="30" id="Image7" /></a></td>
+    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="60" id="Image7" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="30" id="Image8" /></a>
+    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="60" id="Image8" /></a>
       <table width="340" border="0" cellspacing="1" cellpadding="1">
         <tr>
           <td><a href="les02-1.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image19','','images/images/ab2-1.png',1)"><img src="images/images/w2-1.png" width="340" height="30" id="Image19" /></a></td>
@@ -83,10 +83,10 @@ function MM_swapImage() { //v3.0
           <td><a href="les02-4.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image22','','images/images/ab2-4.png',1)"><img src="images/images/w2-4.png" width="340" height="30" id="Image22" /></a></td>
         </tr>
         <tr>
-          <td><a href="les02-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image24','','images/images/ab2-5.png',1)"><img src="images/images/w2-3.png" width="340" height="30" id="Image21" /></a></td>
+          <td><a href="les02-5.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image26','','images/images/ab2-5.png',1)"><img src="images/images/a2-5.png" width="340" height="30" id="Image26" /></a></td>
         </tr>
         <tr>
-          <td><a href="les02-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab2-6.png',1)"><img src="images/images/w2-4.png" width="340" height="30" id="Image22" /></a></td>
+          <td><a href="les02-6.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image25','','images/images/ab2-6.png',1)"><img src="images/images/a2-6.png" width="340" height="30" id="Image25" /></a></td>
         </tr>
         <tr>
           <td><a href="https://forms.gle/kXaixsyQSgKsKrc76" target="_blank" onmouseover="MM_swapImage('Image23','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image23" /></a></td>
@@ -114,9 +114,7 @@ function MM_swapImage() { //v3.0
   <tr>
     <td width="340" height="60"><a href="les09.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image15','','images/images/ab9.png',1)"><img src="images/images/a9.png" width="340" height="60" id="Image15" /></a></td>
   </tr>
-    <tr>
-    <td width="340" height="60"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzCEYEyvkPCmMw-aRKbU5lFwlQocfASFpld6L8zMVfLYGvkQ/viewform" target="_blank" onmouseover="MM_swapImage('Image16','','images/images/ab10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image16" /></a></td>
-  </tr>
+ 
     
     <tr>
     <td width="340" height="110">&nbsp;</td>
