--- a/les06-1.html
+++ b/les06-1.html
@@ -58,28 +58,28 @@ function MM_swapImage() { //v3.0
 <table width="1028" border="0" align="center" cellpadding="1" cellspacing="1">
   <tr>
     <td width="340" height="50"><img src="images/images/d.png" width="340" height="50" /></td>
-    <td width="668" height="500" rowspan="14" valign="top"><img src="images/images/t6-1.png" width="668" height="1000" /></td>
+    <td width="668" height="500" rowspan="14" valign="top"><img src="images/images/t6-1.png" width="668" height="760" /></td>
   </tr>
   <tr>
     <td width="340" height="30"><a href="intro.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/images/ab.png',1)"><img src="images/images/a.png" width="340" height="30" id="Image6" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="30" id="Image7" /></a></td>
+    <td width="340" height="30"><a href="les01.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/images/ab1.png',1)"><img src="images/images/a1.png" width="340" height="60" id="Image7" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="30" id="Image8" /></a></td>
+    <td width="340" height="30"><a href="les02.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/images/ab2.png',1)"><img src="images/images/a2.png" width="340" height="60" id="Image8" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="30" id="Image9" /></a></td>
+    <td width="340" height="30"><a href="les03.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/images/ab3.png',1)"><img src="images/images/a3.png" width="340" height="60" id="Image9" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="30" id="Image10" /></a></td>
+    <td width="340" height="30"><a href="les04.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image10','','images/images/ab4.png',1)"><img src="images/images/a4.png" width="340" height="60" id="Image10" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="30" id="Image11" /></a></td>
+    <td width="340" height="30"><a href="les05.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image11','','images/images/ab5.png',1)"><img src="images/images/a5.png" width="340" height="60" id="Image11" /></a></td>
   </tr>
   <tr>
-    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="30" id="Image12" /></a>
+    <td width="340" height="30"><a href="les06.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image12','','images/images/ab6.png',1)"><img src="images/images/a6.png" width="340" height="60" id="Image12" /></a>
       <table width="340" border="0" cellspacing="1" cellpadding="1">
         <tr>
           <td><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image30','','images/images/ab6-1.png',1)"><img src="images/images/w6-1.png" width="340" height="30" id="Image30" /></a></td>
@@ -112,7 +112,7 @@ function MM_swapImage() { //v3.0
           <td><a href="les06-10.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image28','','images/images/ab6-10.png',1)"><img src="images/images/w6-10.png" width="340" height="30" id="Image28" /></a></td>
         </tr>
         <tr>
-          <td><a href="https://forms.gle/A6vmVoH7rMHC3oPZ6" target="_blank" onmouseover="MM_swapImage('Image29','','images/images/ab1-7.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a1-7.png" width="340" height="30" id="Image29" /></a></td>
+          <td><a href="https://forms.gle/RDhPtoy6iTyVF1dw8" target="_blank" onmouseover="MM_swapImage('Image29','','images/images/a10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image29" /></a></td>
         </tr>
     </table></td>
   </tr>
@@ -125,11 +125,7 @@ function MM_swapImage() { //v3.0
   <tr>
     <td width="340" height="60"><a href="les09.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image15','','images/images/ab9.png',1)"><img src="images/images/a9.png" width="340" height="60" id="Image15" /></a></td>
   </tr>
-    <tr>
-    <td width="340" height="60"><a href="https://docs.google.com/forms/d/e/1FAIpQLSdzCEYEyvkPCmMw-aRKbU5lFwlQocfASFpld6L8zMVfLYGvkQ/viewform" target="_blank" onmouseover="MM_swapImage('Image16','','images/images/ab10.png',1)" onmouseout="MM_swapImgRestore()"><img src="images/images/a10.png" width="340" height="30" id="Image16" /></a></td>
-  </tr>
-    
-    <tr>
+     <tr>
     <td width="340" height="110">&nbsp;</td>
   </tr>
 </table>
